--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -129,7 +129,7 @@ var google_remarketing_only = true;
   <main class="container body">
     <header class="body-header">
       <div class="blog-links">
-        <input type="button" class="button  button--raised  button--positive" value="Subscribe" onclick="(function(){var z=document.createElement('script');z.src='http://www.subtome.com/load.js';document.body.appendChild(z);})()">
+        <input type="button" class="button  button--raised  button--positive" value="Subscribe" onclick="(function(){var z=document.createElement('script');z.src='https://www.subtome.com/load.js';document.body.appendChild(z);})()">
         <a href="/archive.html" class="button  button--raised  button--positive">Read Archives</a>
       </div>
       <h1 class="slim">{{ page.title }}</h1>
