use column--centred-text

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -136,7 +136,7 @@ var google_remarketing_only = true;
     </header>
 
     <div class="body-content">
-      <section class="column  column--terms  body-content-text">
+      <section class="column  column--centred-text  body-content-text">
         {{ content }}
       </section>
     </div>
