container -> container--front
ref superfeedr/assets.superfeedr.com#34

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -93,7 +93,7 @@ var google_remarketing_only = true;
 
 
   <header class="header">
-    <div class="container">
+    <div class="container container--front">
 
       <div class="header-logo">
         <a title="Superfeedr Home" href="/">
@@ -126,7 +126,7 @@ var google_remarketing_only = true;
       </div>
   </header>
 
-  <main class="container body">
+  <main class="container container--front body">
     <header class="body-header">
       <div class="blog-links">
         <input type="button" class="button  button--raised  button--positive" value="Subscribe" onclick="(function(){var z=document.createElement('script');z.src='https://www.subtome.com/load.js';document.body.appendChild(z);})()">
@@ -143,7 +143,7 @@ var google_remarketing_only = true;
 
   </main>
 
-  <div class="footer container">
+  <div class="footer container container--front">
     <footer class="site-footer">
       <div class="site-footer__block">
         <a href="/" class="site-footer__logo"><img alt="Logo invert" src="/images/logo-invert.svg"></a>
