fix layout-level headings in blog

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <article class="blog-article blog-article--single h-entry hentry">
-  <h2 class="entry-title p-name"><a class="u-url" href="{{page.url}}">{{page.title}}</a></h2>
+  <p class="entry-title p-name"><a class="u-url" href="{{page.url}}">{{page.title}}</a></p>
 
   <span class="invisible u-uid" style="display:none">blog.superfeedr.com:{{ page.id }}</span>
 
@@ -34,7 +34,7 @@ layout: default
 
 </div>
 <div class="blog-comments">
-  <h3>Comments</h3>
+  <h2>Comments</h2>
 
     <div id="disqus_thread">
     </div>
