swap to https URLs for OG

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,11 +31,11 @@
 
   <!-- facebook open graph tags -->
   <meta property="og:title" content="{{ page.title }}" />
-  <meta property="og:url" content="http://blog.superfeedr.com{{ page.url }}" />
+  <meta property="og:url" content="https://blog.superfeedr.com{{ page.url }}" />
   <meta property="og:type" content="article" />
   <meta property="og:description" content="{{page.description}}" />
   <meta property="og:site_name" content="Superfeedr Blog" />
-  <meta property="og:image" content="http://blog.superfeedr.com{{page.image}}" />
+  <meta property="og:image" content="https://blog.superfeedr.com{{page.image}}" />
   <meta property="fb:app_id" content="191433524399">
 
   <!-- twitter card tags additive with the og: tags -->
@@ -44,8 +44,8 @@
   <meta name="twitter:domain" content="blog.superfeedr.com" />
   <meta name="twitter:title" content="{{ page.title }}" />
   <meta name="twitter:description" content="{{page.description}}" />
-  <meta name="twitter:url" content="http://blog.superfeedr.com{{ page.url }}" />
-  <meta name="twitter:image" content="http://blog.superfeedr.com{{page.image}}" />
+  <meta name="twitter:url" content="https://blog.superfeedr.com{{ page.url }}" />
+  <meta name="twitter:image" content="https://blog.superfeedr.com{{page.image}}" />
 
 
   {% if paginator.page %}
