adding _posts/2016-03-30-embed-river-news.markdown

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
   <link href="//assets.superfeedr.com/assets/css/global.css" rel="stylesheet" type="text/css">
   <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,400italic%7CSource+Code+Pro:400,600" rel="stylesheet" type="text/css">
 
+  <link rel="shortcut icon" href="//assets.superfeedr.com/assets/img/favicon.png">
 
   {% for css_file in page.css_includes %}
   <link href="{{ css_file }}" rel="stylesheet" type="text/css">
